// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Form item hidden noStyle should not work when hidden 1`] = `
<form
  class="ezd-form ezd-form-horizontal"
>
  <div
    class="ezd-row ezd-form-item ezd-form-item-hidden"
  >
    <div
      class="ezd-col ezd-form-item-control"
    >
      <div
        class="ezd-form-item-control-input"
      >
        <div
          class="ezd-form-item-control-input-content"
        >
          <input
            class="ezd-input"
            id="light"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Form Form item hidden should work 1`] = `
<form
  class="ezd-form ezd-form-horizontal"
>
  <div
    class="ezd-row ezd-form-item ezd-form-item-hidden"
  >
    <div
      class="ezd-col ezd-form-item-control"
    >
      <div
        class="ezd-form-item-control-input"
      >
        <div
          class="ezd-form-item-control-input-content"
        >
          <input
            class="ezd-input"
            id="light"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Form Form.Item should support data-*、aria-* and custom attribute 1`] = `
<form
  class="ezd-form ezd-form-horizontal"
>
  <div
    aria-hidden="true"
    cccc="bbbb"
    class="ezd-row ezd-form-item"
    data-text="123"
  >
    <div
      class="ezd-col ezd-form-item-control"
    >
      <div
        class="ezd-form-item-control-input"
      >
        <div
          class="ezd-form-item-control-input-content"
        >
          text
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Form rtl render component should be rendered correctly in RTL direction 1`] = `
<form
  class="ezd-form ezd-form-horizontal ezd-form-rtl"
/>
`;

exports[`Form rtl render component should be rendered correctly in RTL direction 2`] = `
<div
  class="ezd-row ezd-row-rtl ezd-form-item"
>
  <div
    class="ezd-col ezd-form-item-control ezd-col-rtl"
  >
    <div
      class="ezd-form-item-control-input"
    >
      <div
        class="ezd-form-item-control-input-content"
      />
    </div>
  </div>
</div>
`;
